# ocaml_quest_complete_by_lomig

./: .gitignore  Dockerfile  README.md  dune-project  dune-workspace  quest_complete.opam  quest_complete.opam.template  sql_script.md
.docker/share/postgresql/17/extension/: ulid--0.2.0.sql  ulid.control
lib/client/: assets.ml  dune
lib/client/javascript/: application.js
lib/client/javascript/controllers/: hello_world_controller.js
lib/client/javascript/pinned/: stimulus-loading@v0.0.1.js
lib/client/stylesheets/: application.css
lib/server/: dune  router.ml
lib/server/domain/: date.ml  date.mli  dune  game.ml  platform.ml
lib/server/handlers/: dune  games.ml  pages.ml
lib/server/templates/: dune
lib/server/templates/layouts/: dune  main.eml.html
lib/server/templates/pages/: dune  homepage.eml.html
lib/server/views/: dune  pages.ml
lib/server/views/_components/: components.ml  dune
lib/server/views/_components/games/: card.ml
lib/server/views/_layouts/: dune  main.ml
lib/server/views/games/: index.ml  show.ml
lib/server/views/pages/: homepage.ml
test/: dune
